# aasaan

./: .cvsignore  Aasaan.merlin2  Makefile  Makefile.am  TODO  TranslationTools  aasaan.tex  acprep  arabic.cc  arabic.cpp  arabic.h  chaap.py  chaap.py.old  configure.in  convert.py  haftvadi.xml  justan.cc  justan.py  setup.py  t.tex  test.opml  test.py
example/: commentary  glossary  hafiz  hafiz.eng  haftvadi  haftvadi.eng  haftvadi.eng.fn  haftvadi.tex  love  love.eng  program.tex  rida  svtitle.tex  vocabulary
obsolete/: aasaan.pm  chaap-old.py  chaap-xml.py  chaap.pl  gateconv.pl  haftvadi  haftvadi.xml  justan  lughat  lughat.pm  lughat.py  sidaa  template.xml
